--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "music",
+  "name": "solution",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "liuxingzhijian1320 <zhs1320@163.com>",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "autoprefixer": "^6.7.2",
     "axios": "^0.16.2",
+    "mint-ui": "^2.2.7",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
@@ -46,15 +47,20 @@
     "http-proxy-middleware": "^0.17.3",
     "ip": "^1.1.5",
     "jquery": "^3.2.1",
+    "mint-ui": "^2.2.7",
     "node-sass": "^4.5.3",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.2.0",
+    "progressbar.js": "^1.0.1",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "store": "^2.0.4",
+    "style-loader": "^0.18.2",
+    "swiper": "^3.4.2",
+    "toastr": "^2.1.2",
     "url-loader": "^0.5.8",
     "vue": "^2.3.3",
     "vue-lazyload": "^1.0.5",
