--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "vue": "^2.3.3",
+    "vue-occupy": "0.0.9",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
