--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "vue": "^2.3.3",
     "vue-occupy": "0.0.9",
-    "vue-router": "^2.3.1"
+    "vue-router": "^2.3.1",
+    "vue2-touch": "^1.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
     "axios": "^0.16.2",
-    "mint-ui": "^2.2.7",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
@@ -44,10 +44,12 @@
     "fastclick": "^1.0.6",
     "file-loader": "^0.11.1",
     "friendly-errors-webpack-plugin": "^1.1.3",
+    "hammer": "0.0.5",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "ip": "^1.1.5",
     "jquery": "^3.2.1",
+    "mint-ui": "^2.2.7",
     "node-sass": "^4.5.3",
     "opn": "^4.0.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
