--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "http-proxy-middleware": "^0.17.3",
     "ip": "^1.1.5",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "mint-ui": "^2.2.7",
     "node-sass": "^4.5.3",
     "opn": "^4.0.2",
